--- a/LibriVox/StoryBoard/Library.storyboard
+++ b/LibriVox/StoryBoard/Library.storyboard
@@ -149,7 +149,7 @@
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vsD-d5-zyM" customClass="RoundedBookImageView" customModule="LibriVox" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="10" width="77" height="125"/>
-                                            <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="77" id="Kog-xW-g3p"/>
                                             </constraints>
@@ -276,25 +276,25 @@
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O1I-E8-xzJ" customClass="RoundedBookImageView" customModule="LibriVox" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="77" height="125"/>
-                                            <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="77" id="bfx-C4-03f"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Percy Jackson: The Lightning Thief" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oHD-S1-uK2">
-                                            <rect key="frame" x="87" y="5" width="256" height="17.666666666666668"/>
+                                            <rect key="frame" x="87" y="5" width="256" height="20.666666666666668"/>
                                             <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration: 08:40:31" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Uz-sa-4Mv">
-                                            <rect key="frame" x="87" y="77.333333333333329" width="107" height="15.333333333333329"/>
+                                            <rect key="frame" x="87" y="72" width="107" height="18"/>
                                             <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre: Action, Adventure" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iib-PH-hrF">
-                                            <rect key="frame" x="87" y="94.666666666666671" width="146" height="15.333333333333329"/>
+                                            <rect key="frame" x="87" y="92" width="142" height="18"/>
                                             <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -307,13 +307,13 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author: Rick Riordan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xvR-S9-KMM">
-                                            <rect key="frame" x="87" y="60.000000000000007" width="120.66666666666669" height="15.333333333333336"/>
+                                            <rect key="frame" x="87" y="52" width="115.33333333333331" height="18"/>
                                             <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eeG-1D-zCM">
-                                            <rect key="frame" x="358" y="-3.6666666666666661" width="35" height="35"/>
+                                            <rect key="frame" x="358" y="-2.3333333333333339" width="35" height="35.333333333333336"/>
                                             <color key="tintColor" name="AccentColor"/>
                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                             <state key="normal" image="star" catalog="system"/>
@@ -346,6 +346,7 @@
                                     <outlet property="authorBook" destination="xvR-S9-KMM" id="0RD-Xh-9me"/>
                                     <outlet property="durationBook" destination="0Uz-sa-4Mv" id="og4-8N-AQg"/>
                                     <outlet property="genreBook" destination="iib-PH-hrF" id="joZ-MY-MOg"/>
+                                    <outlet property="imgBook" destination="O1I-E8-xzJ" id="Wug-Kd-3IL"/>
                                     <outlet property="titleBook" destination="oHD-S1-uK2" id="ZC2-4c-P2e"/>
                                 </connections>
                             </tableViewCell>
@@ -392,7 +393,7 @@
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="96F-Gt-DxQ" customClass="RoundedBookImageView" customModule="LibriVox" customModuleProvider="target">
                                             <rect key="frame" x="23" y="10" width="110" height="172"/>
-                                            <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="172" id="iSL-ik-KAi"/>
                                                 <constraint firstAttribute="width" constant="110" id="uz6-mc-9Vh"/>
